Using langcodes for language parsing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
   "wrapt",
   "itsdangerous",
   "http_session",
-  "vernacular",
+  "langcodes",
   "autorouting",
   "plum-dispatch",
   "pyhamcrest",
