added jsonschema utility class

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,22 +12,23 @@ requires-python = ">=3.10"
 classifiers = ["License :: OSI Approved :: MIT License"]
 dependencies = [
   "autoroutes",
-  "chameleon",
-  "frozendict",
-  "orjson",
-  "prejudice",
-  "dishka >= 1.7",
-  "wrapt",
-  "itsdangerous",
-  "http_session",
-  "langcodes",
   "autorouting",
-  "plum-dispatch",
-  "pyhamcrest",
   "biscuits >= 0.3.0",
+  "chameleon",
+  "dishka >= 1.7",
+  "frozendict",
+  "http_session",
+  "itsdangerous",
+  "jsonschema_rs",
+  "langcodes",
   "multidict >= 5.1",
   "multifruits >= 0.1.5",
   "orderedsets",
+  "orjson",
+  "plum-dispatch",
+  "prejudice",
+  "pyhamcrest",
+  "wrapt",
 ]
 
 [project.optional-dependencies]
