--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,30 +11,18 @@ authors = [
 requires-python = ">=3.10"
 classifiers = ["License :: OSI Approved :: MIT License"]
 dependencies = [
-  "autoroutes",
-  "autorouting",
   "biscuits >= 0.3.0",
-  "chameleon",
-  "dishka >= 1.7",
   "frozendict",
-  "http_session",
-  "itsdangerous",
-  "jsonschema_rs",
   "langcodes",
-  "multidict >= 5.1",
   "multifruits >= 0.1.5",
-  "orderedsets",
   "orjson",
-  "plum-dispatch",
-  "prejudice",
-  "pyhamcrest",
-  "wrapt",
 ]
 
 [project.optional-dependencies]
 test = [
-    'pytest',
-    'webtest'
+    "pytest",
+    "pyhamcrest",
+    "webtest",
 ]
 
 [tool.setuptools.packages.find]
